--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
-    "esModuleInterop": true,
-  }
+    "esModuleInterop": true
+  },
+  "exclude": [
+    "node_modules",
+    "src/templates"
+  ]
 }
