--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@felipemeriga/next-generator",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "index.ts",
   "scripts": {
@@ -41,8 +41,10 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "ejs": "^3.1.5",
     "inquirer": "^7.3.3",
+    "ncp": "^2.0.0",
     "shelljs": "^0.8.4"
   }
 }
